Finished CRUD functions

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
   <h2>Todo List</h2>
   <form action="/tasks" method="POST">
     <input type="text" placeholder="Task" name="task"><br><br>
-    <button type="submit">Save</button>
+    <button type="submit">Create New Task</button>
   </form>
   
 <br><br>
