--- a/views/tasks.hbs
+++ b/views/tasks.hbs
@@ -2,16 +2,12 @@
   
   <ul class="tasks">
   {{#each tasks}}
-  <form action="/delete" method="POST">
     <li class="task">
       <span>
         <a href="/tasks/{{task}}">{{task}}</a><br>
-        <input type="hidden" name="task" value="{{task}}">
-        <!-- <button id="deletar" type="submit">X</button> -->
       </span>
     </li>
-  </form>
   {{/each}}
   </ul>
 
-<a href="/">Voltar</a>
+<a href="/">Go Back</a>
