Fixed title name

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,6 +1,6 @@
 <html>  
   <head>
-    <title>Express handlebars</title>
+    <title>Todo List</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
