Fixed empty task problem

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
   <h2>Todo List</h2>
   <form action="/tasks" method="POST">
-    <input type="text" placeholder="Task" name="task"><br><br>
+    <input type="text" placeholder="Task" name="task" required><br><br>
     <button type="submit">Create New Task</button>
   </form>
   
