Added task description

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,8 @@
   <h2>Todo List</h2>
   <form action="/tasks" method="POST">
     <input type="text" placeholder="Task" name="task" required><br><br>
+    <textarea name="description" placeholder="Description" cols="25" rows="6"></textarea><br><br>
     <button type="submit">Create New Task</button>
   </form>
-  
-<br><br>
-
+<br>
 <a href="/tasks">All Tasks</a>
